--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,29 @@
 <resources>
     <string name="app_name">Calculator</string>
     <string name="action_settings">Settings</string>
+    <string name="opPlus">+</string>
+    <string name="opMinus">\u2212</string>
+    <string name="opDivision">/</string>
+    <string name="opMultiplication">*</string>
+    <string name="opPower">^</string>
+    <string name="opLeftParenthesis">(</string>
+    <string name="opRightParenthesis">)</string>
+    <string name="opNegative">-</string>
+    <string name="decimalPoint">.</string>
+    <string name="num0">0</string>
+    <string name="num1">1</string>
+    <string name="num2">2</string>
+    <string name="num3">3</string>
+    <string name="num4">4</string>
+    <string name="num5">5</string>
+    <string name="num6">6</string>
+    <string name="num7">7</string>
+    <string name="num8">8</string>
+    <string name="num9">9</string>
+    <string name="allClear">AC</string>
+    <string name="clear">C</string>
+    <string name="delete">Del</string>
+    <string name="total">=</string>
+    <string name="inputText">0</string>
+    <string name="invalidInput">Invalid Input</string>
 </resources>
