Fixed negation issue before parenthesis.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,5 @@
     <string name="total">=</string>
     <string name="inputText">0</string>
     <string name="invalidInput">Invalid Input</string>
-    <string name="operators">\u2212+*/^()</string>
+    <string name="operators">\u2212+*/^()-</string>
 </resources>
